<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#85BAB4"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.s22.bloqueo.MainLogin" >
    
    <ImageView 
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/info_screen_ico"/>

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:text="@string/texto" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        style="@style/white_style"
        android:text="@string/siguiente_texto" />
    
    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/white_style"
        android:text="@string/ir_a_texto" />
    
    <!--  
    <Button
        android:id="@+id/button1"
        style="@style/button_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/main_login_button_twitter" />

	<com.facebook.widget.LoginButton
	    android:id="@+id/button3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/button1"
	    android:layout_below="@+id/button1"
	    android:layout_marginTop="50dp" />

	<Button
	    android:id="@+id/button2"
	    style="@style/button_no_login"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/button3"
	    android:layout_below="@+id/button3"
	    android:layout_marginTop="50dp"
	    android:text="@string/main_login_button_no" />

	
	 <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         style="@style/button_info" />
         
         -->
</LinearLayout>
